# Pilot

./: .gitignore  Dockerfile  LICENSE  PACKAGING.md  README.md  main.py  pyproject.toml  requirements.txt
configs/: config.yaml
data/: surrogates_catalog.json
docs/: AGENT.md  API.md  KNOWLEDGE.md  PUBLISH_TO_GITHUB.md  SURROGATE.md
em_solver/: __init__.py  mock_client.py  openems_builder.py  openems_client.py  results_extractor.py
examples/: example_query.txt
pilot/: __init__.py  knowledge_service.py  logging_utils.py  parser.py  planner.py  reporter.py  schema.py  state_machine.py  utils.py  workflow.py
pilot/platform/: api_models.py
prompts/: system_prompt_placeholder.md
scripts/: run_web.sh
tests/: test_knowledge_corpus.py  test_parser.py  test_platform_api_models.py  test_workflow_mock_smoke.py
web/: __init__.py  app.py  portal_routes.py
web/static/: agent.html  app.js  guide.html  hub.html  i18n.js  knowledge.html  knowledge.js  pilot-nav.js  portal.css  styles.css  surrogate.html  surrogate.js  team.html
